# godearth

./: .gitignore  CMakeLists.txt  conanfile.txt  godot-gis.gdextension  readme.md
_old/graphicsitems/: common.h  geometryitem.cpp  geometryitem.h  graphicsitems.pri  graticuleitem.cpp  graticuleitem.h  rasteritem.cpp  rasteritem.h  tileitem.cpp  tileitem.h  tileitemgroup.cpp  tileitemgroup.h  tileitemgrouphelper.cpp  tileitemgrouphelper.h
_old/math/: Ellipsoid.gd  Geodetic3D.gd
_old/tilesources/: elevationtilesource.cpp  elevationtilesource.h  localtilesource.cpp  localtilesource.h  networktilesource.h  tilepromise.h  tilesource.cpp  tilesource.h  tilesourceimpl.h  tilesources.pri  tmstilesource.cpp  tmstilesource.h  xyz.h
demo/: godot-gis.gdextension  godot-gis.gdextension.uid  project.godot
demo/assets/: heightmap.png.import
demo/globe_playground/: character_body_3d.gd  character_body_3d.gd.uid  globe_camera.gd  globe_camera.gd.uid  playground.gd  playground.gd.uid  playground.tscn
demo/map_playground/: map_3d.tscn
demo/scenes/: TestGlobe3D.tscn  TestMap2D.tscn  camera_3d.gd  camera_3d.gd.uid  test_globe_3d.gd  test_globe_3d.gd.uid  test_globe_3d.tscn  test_map_2d.gd  test_map_2d.gd.uid  test_map_2d.tscn
doc/extension_api_patches/: ellipsoid_doc.json
src/: gis_singleton.cpp  gis_singleton.hpp  globe3d.cpp  globe3d.hpp  map2d_control.cpp  map2d_control.hpp  register_types.cpp  vector_source.cpp  vector_source.hpp
src/data_sources/: raster_source.cpp  raster_source.hpp  vector_source.cpp
src/math/: Ellipsoid.cpp  Ellipsoid.hpp  Geodetic3D.cpp  Geodetic3D.hpp
src/mesh/: AbstractTessellator.cpp  (+5 more)
(+39 files in other folders)
